--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,27 @@
 .App {
   font-family: sans-serif;
   text-align: center;
-  min-height: 100vh;
-  display: grid;
-  place-self: center;
+  min-height: 90vh;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.boards-container {
+  max-width: 1600px;
+  padding: 22px;
+  display: flex;
+  justify-content: center;
+  max-height: 90vh;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 5rem;
 }
 
 .bingo-board {
   display: grid;
   place-items: center;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, minmax(50px, 1fr));
   grid-template-rows: repeat(5, 100px);
 }
 
@@ -19,6 +31,8 @@
   height: 100%;
   display: grid;
   place-items: center;
+  max-width: 350px;
+  aspect-ratio: 1/1;
 }
 
 .dragging {
