--- a/src/styles.css
+++ b/src/styles.css
@@ -45,3 +45,9 @@
   background-color: bisque;
   transition: all 300ms ease;
 }
+
+.board-text input {
+  border: none;
+  padding: 0;
+  width: 100%;
+}
